extend format rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,14 @@ indent-width = 2
 
 [tool.ruff.format]
 quote-style = "single"
+
+[tool.ruff.lint]
+extend-select = [
+    "BLE",      # disallow catch-all exceptions
+    "F",        # Pyflakes rules
+    "FA",       # Enforce from __future__ import annotations
+    "I",        # Isort rules
+    "ICN",      # Use common import conventions
+    "PLE",      # Pylint Errors
+    "TID",      # Some good import practices
+]
