--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ torch==2.6.0
 transformers==4.44.2
 wandb>=0.17.9
 zstandard==0.23.0
+neural-pipeline-search @ git+https://github.com/automl/neps@neps-spaces
