Update package versions to allow greater flexibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-absl-py==2.1.0
-datasets==3.5.0
-PyYAML==6.0.2
-torch==2.6.0
-transformers==4.44.2
+absl-py>=2.1.0
+datasets>=3.5.0
+PyYAML>=6.0.2
+torch>=2.6.0
+transformers>=4.44.2
 wandb>=0.17.9
-zstandard==0.23.0
+zstandard>=0.23.0
 neural-pipeline-search @ git+https://github.com/automl/neps@neps-spaces
